[package]
name = "code_engine_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4"
regex = "1"
openssl = { version = "0.10", features = ["vendored"] }
serde = "*"
serde_json = "*"
serde_derive = "*"